# JNA_Monitor

./: Cargo.toml
src/: about_tab_gui.rs  gui.rs  loading_gui.rs  main.rs  main_tab_gui.rs  settings.rs  settings_tab_gui.rs  styling.rs  triggers_tab_gui.rs
